Fix css so that promos don't overlap Frank on logged-out homepage.
git-svn-id: http://code.livejournal.org/svn/livejournal/branches/r5@10954 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/home.css
+++ b/htdocs/stc/home.css
@@ -274,6 +274,9 @@ table.stats-meter {
     padding-right: 15px;
     margin-bottom: 50px;
 }
+*:first-child+html .homepage-wrapper .homepage-promo {
+    padding-bottom: 50px; /* IE7 hack so promos don't overlap frank */
+}
 .homepage-wrapper .homepage-promo p {
     font-size: 12px;
     line-height: 16px;
